Test/errors/err_dict_noncopyable_value.cb
// dictionary<K,V> for a non-copyable V (owns a `unique` pointer, no copy()) must still
// instantiate: the copying add()/set() are poisoned instead, and error only when called.
// The transfer overload d.add(k, move x) stays usable - see test_collection_leaks.cb.
import "dictionary.cb";
class Res { int id = default; };
class Holder { unique Res* r = default; };
expect_error("write 'move' at the call site");
extern int main()
{
    dictionary<int, Holder> d = default;
    Holder h = default;
    d.add(1, h);
    return 0;
}
